--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -432,34 +432,21 @@
           <h4 class="arrow">NEWSLETTER</h4>
         </div>           
       
-        <!-- NEWSLETTER---> 
- <section class="newsletter wrap">
+  <!-- NEWSLETTER---> 
+<section class="newsletter wrap">
     <img class="newsletter-img" src="../../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
     <div class="newsletter-content">
         <h2>Sign up for our Newsletter</h2>
        <h4>Recieve the latest news about our products, services and events</h4>
+    
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+    <script>
+     hbspt.forms.create({
+        portalId: "4304957",
+        formId: "506acf1b-d291-445a-892e-986cbe5d21a4"
+    });
+    </script>
     </div>  
-<form novalidate="" accept-charset="UTF-8" action="https://forms.hsforms.com/submissions/v3/public/submit/formsnext/multipart/4304957/b46283cb-637c-46a5-8b9c-4cb06bc46bd3" enctype="multipart/form-data" id="hsForm_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
-method="POST" class="newsletter hs-form stacked hs-form-private hs-form-b46283cb-637c-46a5-8b9c-4cb06bc46bd3_ab294c00-5f63-4e0c-a3a0-9c26a5604c85" data-form-id="b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-portal-id="4304957" target="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
-data-reactid=".hbspt-forms-4">
-    <div class="form-group hs_email hs-email hs-fieldtype-text field hs-form-field" data-reactid=".hbspt-forms-4.1:$0">
-        <label id="label-email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="" placeholder="" for="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-reactid=".hbspt-forms-4.1:$0.0"><span data-reactid=".hbspt-forms-4.1:$0.0.0"></span><span class="hs-form-required" data-reactid=".hbspt-forms-4.1:$0.0.1">*</span>
-        </label>
-        <legend class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-4.1:$0.1"></legend>
-        <div class="input" data-reactid=".hbspt-forms-4.1:$0.$email">
-            <input id="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="hs-input form-control" type="email" name="email" required="" placeholder="E-post" value="" autocomplete="email" data-reactid=".hbspt-forms-4.1:$0.$email.0">
-        </div>
-    </div>
-    <noscript data-reactid=".hbspt-forms-4.2"></noscript>
-    <div class="hs_submit hs-submit" data-reactid=".hbspt-forms-4.5">
-        <div class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-4.5.0"></div>
-        <div class="actions" data-reactid=".hbspt-forms-4.5.1">
-            <input type="submit" value="Sign me up" class="hs-button submit btn btn-primary" data-reactid=".hbspt-forms-4.5.1.0">
-        </div>
-    </div>
-    <noscript data-reactid=".hbspt-forms-4.6"></noscript>
-
-    <iframe name="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3" style="display:none;" data-reactid=".hbspt-forms-4.8"></iframe>
 </form>
 <div class="social-media-icons">
     <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
@@ -551,5 +538,8 @@ data-reactid=".hbspt-forms-4">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="../../js/navigation.js"></script>  
+    <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/4304957.js"></script>
+<!-- End of HubSpot Embed Code -->
   </body>
 </html>
