--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -243,7 +243,7 @@
           <div class="col-md-6">
           <h4 class="miniwrap">Please leave us a message through the contact form below, or reach out to one of our team members directly</h4>
         
-          <h3>How can we help?</h3>
+          <h3>How may we help you?</h3>
         
           </div>
           <div class="col-md-6">
