--- a/en/career/index.html
+++ b/en/career/index.html
@@ -55,7 +55,7 @@
             </div>
           </li>
         <li class="">
-          <a class="nav-link" href="https://medium.com/ignite-procurement" target="blank">Innsight</a>
+          <a class="nav-link" href="https://medium.com/ignite-procurement" target="blank">Insight</a>
         </li>
         <li class="">
           <a class="nav-link" href="../contact">Contact</a>
