--- a/en/ignite-services/index.html
+++ b/en/ignite-services/index.html
@@ -56,7 +56,7 @@
             </div>
           </li>
         <li class="">
-          <a class="nav-link" href=" https://medium.com/ignite-procurement" target="blank">Innsight</a>
+          <a class="nav-link" href=" https://medium.com/ignite-procurement" target="blank">Insight</a>
         </li>
         <li class="">
           <a class="nav-link" href="../contact/">Contact</a>
